package source;

public interface Observateur {

    public void actualiser();

}
